# rgit

./: .gitignore  Cargo.toml  LICENSE  makefile  zsh-completion-syntax.md
.cargo/: config.toml
src/: main.rs  parsers.rs  utils.rs
src/commands/: add.rs  branch.rs  cat_file.rs  checkout.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  log.rs  ls_files.rs  ls_tree.rs  mod.rs  restore_commit.rs  rm.rs  show_ref.rs  status.rs  tag.rs  write_tree.rs
src/structures/: commit.rs  diff.rs  index.rs  mod.rs  object.rs  repo.rs  tag.rs  tree.rs
